--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "thirdweb": "latest",
+    "@thirdweb-dev/react@3.12.0",
+    "@thirdweb-dev/wallets@3.12.0",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
