--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "thirdweb": "^5.0.0",
-    "@thirdweb-dev/sdk": "3.12.0",
-    "@thirdweb-dev/react": "3.12.0",
+    "@thirdweb-dev/sdk": "4.0.99",
+    "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/wallets": "1.1.13",
+    "ethers": "^5.7.2",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
