--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "@thirdweb-dev/sdk": "4.0.99",
     "@thirdweb-dev/react": "^4.9.4",
     "@thirdweb-dev/wallets": "1.1.13",
-    "ethers": "^5.7.2",
+    "ethers": "^6.0.0",
+    "next": "13.4.4",
+    "tailwindcss": "^3.3.2",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14",
+    "dotenv": "^16.0.3",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
