--- a/package.json
+++ b/package.json
@@ -78,5 +78,9 @@
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
+  },
+  "overrides": {
+  "ajv": "8.12.0",
+  "ajv-keywords": "5.1.0"
   }
 }
