--- a/package.json
+++ b/package.json
@@ -14,45 +14,29 @@
     "neumorphism"
   ],
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "@thirdweb-dev/wallets": "^1.1.13",
+    "ethers": "^6.13.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
+    "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "thirdweb": "^5.0.0",
-    "@thirdweb-dev/sdk": "4.0.99",
-    "@thirdweb-dev/react": "^4.9.4",
-    "@thirdweb-dev/wallets": "1.1.13",
-    "ethers": "^6.0.0",
-    "next": "13.4.4",
-    "tailwindcss": "^3.3.2",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14",
-    "dotenv": "^16.0.3",
-    "web-vitals": "^3.0.4"
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src --ext .js,.jsx",
-    "lint:fix": "eslint src --ext .js,.jsx --fix",
-    "format": "prettier --write src/**/*.{js,jsx,css}",
-    "analyze": "npm run build && npx source-map-explorer build/static/js/*.js",
-    "deploy:vercel": "vercel --prod",
-    "preview": "serve -s build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "deploy:vercel": "vercel --prod"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
+    "extends": "next/core-web-vitals",
     "rules": {
       "no-unused-vars": "warn",
       "no-console": "warn"
@@ -71,16 +55,18 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.8.0",
-    "serve": "^14.2.0",
-    "source-map-explorer": "^2.5.3"
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
+    "autoprefixer": "^10.4.16",
+    "eslint": "8.57.0",
+    "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.5",
+    "typescript": "5.4.3"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  },
-  "overrides": {
-  "ajv": "8.12.0",
-  "ajv-keywords": "5.1.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
