--- a/package.json
+++ b/package.json
@@ -14,18 +14,17 @@
     "neumorphism"
   ],
   "dependencies": {
-    "@thirdweb-dev/react": "^4.9.4",
-    "@thirdweb-dev/sdk": "^4.0.99",
-    "@thirdweb-dev/wallets": "^1.1.13",
-    "ethers": "^6.13.0",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.294.0",
-    "next": "12.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.8.1",
-    "tailwindcss": "^3.3.3"
+    "@thirdweb-dev/react": "4.9.4",
+    "@thirdweb-dev/sdk": "4.0.99",
+    "@thirdweb-dev/wallets": "1.1.13",
+    "ethers": "6.6.4",
+    "framer-motion": "10.16.16",
+    "lucide-react": "0.294.0",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
+    "tailwindcss": "3.3.3"
   },
   "scripts": {
     "dev": "next dev",
@@ -55,18 +54,18 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "20.11.5",
+    "@types/node": "18.17.17",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.57.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.5",
-    "typescript": "5.4.3"
+    "autoprefixer": "10.4.16",
+    "eslint": "8.53.0",
+    "eslint-config-next": "13.2.4",
+    "postcss": "8.4.33",
+    "prettier": "3.2.5",
+    "typescript": "5.1.6"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": "18.17.0",
+    "npm": "9.6.7"
   }
 }
