--- a/package.json
+++ b/package.json
@@ -1,45 +1,31 @@
 {
-  "name": "fasttero-defi",
+  "name": "fasttero",
   "version": "1.0.0",
-  "description": "Modern DeFi platform with neumorphism design and NFT staking",
   "private": true,
-  "homepage": "https://fasttero.vercel.app",
-  "keywords": [
-    "defi",
-    "nft",
-    "staking",
-    "dapp",
-    "ethereum",
-    "web3",
-    "neumorphism"
-  ],
-  "dependencies": {
-    "@thirdweb-dev/react": "4.9.4",
-    "@thirdweb-dev/sdk": "4.0.99",
-    "@thirdweb-dev/wallets": "1.1.13",
-    "ethers": "6.6.4",
-    "framer-motion": "10.16.16",
-    "lucide-react": "0.294.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.12.0",
-    "tailwindcss": "3.3.3"
-  },
+  "description": "React app with Thirdweb SDK and Web3 packages",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "deploy:vercel": "vercel --prod"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "next/core-web-vitals",
-    "rules": {
-      "no-unused-vars": "warn",
-      "no-console": "warn"
-    }
+  "dependencies": {
+    "@thirdweb-dev/react": "^4.1.35",
+    "@thirdweb-dev/sdk": "^4.1.35",
+    "@ethersproject/providers": "^5.7.2",
+    "ethers": "^5.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.3.1",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   },
   "browserslist": {
     "production": [
@@ -53,19 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/node": "18.17.17",
-    "@types/react": "18.2.43",
-    "@types/react-dom": "18.2.17",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.53.0",
-    "eslint-config-next": "13.2.4",
-    "postcss": "8.4.33",
-    "prettier": "3.2.5",
-    "typescript": "5.1.6"
-  },
-  "engines": {
-    "node": "18.17.0",
-    "npm": "9.6.7"
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
