--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "4.9.4",
-    "@thirdweb-dev/sdk": "4.9.4",
+    "@thirdweb-dev/react": "^4",
+    "@thirdweb-dev/sdk": "^4",
     "@ethersproject/providers": "5.7.2",
-    "ethers": "5.7.2",
+    "ethers": "^5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
