--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "description": "React app with Thirdweb SDK and Web3 packages",
   "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^4",
-    "@thirdweb-dev/sdk": "^4",
+    "@thirdweb-dev/react": "4.1.29",
+    "@thirdweb-dev/sdk": "4.0.88",
     "@ethersproject/providers": "5.7.2",
-    "ethers": "^5",
+    "ethers": "5.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
@@ -25,7 +25,9 @@
     "util": "0.12.5"
   },
   "devDependencies": {
-    "dotenv": "16.4.5"
+    "dotenv": "16.4.5",
+    "react-app-rewired": "2.2.1",
+    "customize-cra": "1.0.0"
   },
   "browserslist": {
     "production": [
@@ -43,5 +45,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ethers": "5.7.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
