--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "buffer": "6.0.3",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "util": "0.12.5"
   },
   "devDependencies": {
