--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "5.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "3.3.1",
     "buffer": "6.0.3",
