--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "framer-motion": "^11.0.0",
     "web-vitals": "3.3.1",
     "buffer": "6.0.3",
     "process": "0.11.10",
