--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "framer-motion": "^11.0.0",
+    "lucide-react": "^0.468.0",
     "web-vitals": "3.3.1",
     "buffer": "6.0.3",
     "process": "0.11.10",
